# undergrad-thesis

./: README.md  requirements.txt
panda_description/: CMakeLists.txt  package.xml  requirements.txt
panda_description/launch/: display.launch.py  gazebo.launch.py  old_panda_with_instruments.launch.py  panda_homography.launch.py  panda_new_world.launch.py  panda_with_instruments.launch.py  world_only.launch.py
panda_description/meshes/visual/: Camera.dae
panda_description/models/HomoBoxRed/: model.config  model.sdf
panda_description/models/mock_camera/: model.config  model.sdf
panda_description/models/needle_holder/: model.config  model.sdf
panda_description/models/retractor/: model.config  model.sdf
panda_description/models/scalpel/: model.config  model.sdf
panda_description/models/scissors/: model.config  model.sdf
panda_description/models/thesis/DAE/: HomoBoxRed.dae  (+7 more)
panda_description/models/tweezers/: model.config  model.sdf
panda_description/rviz/: display.rviz
panda_description/scripts/: spawn_homography.py  spawn_instruments.py  spawn_panda_with_retry.py  test_spawn.py
panda_description/src/: spawn_instruments_apalah.py
panda_description/urdf/: arm.xacro  arm_test.xacro  d435.xacro  depth_camera.xacro  gazebo.xacro  panda.urdf.xacro  rgbd_camera.xacro  ros2control.xacro  temp.sdf
panda_description/worlds/: awikwok.world  awikwok.world.xacro  empty.world.txt  empty.world.xacro  homography.world  homography.world.xacro  old_test.world  old_test.world.xacro  test.world  test.world.txt  test.world.xacro  thesis.world  thesis.world.xacro
(+86 files in other folders)
